add datasheet to ssd1306

--- a/i2c-ssd1306.md
+++ b/i2c-ssd1306.md
@@ -1,5 +1,9 @@
 # I2C, Firmata and the SSD1306
 
+### ssd1306 datasheet
+
++ https://www.adafruit.com/datasheets/SSD1306.pdf
+
 ### sending a byte array to ic2 display example
 
 + https://github.com/jgautier/firmata/blob/master/examples/k22.js
